test/cppcheck_suppressions.txt
//
// Ignore libinjection related stuff.
//
*:others/libinjection/src/libinjection_html5.c
*:others/libinjection/src/libinjection_sqli.c
*:others/libinjection/src/libinjection_xss.c
*:others/libinjection/src/reader.c
*:others/libinjection/src/sqli_cli.c
*:others/libinjection/src/testdriver.c
*:others/libinjection/src/test_speed_sqli.c
*:others/libinjection/src/test_speed_xss.c


//
// Lets ignore mbedtls.
//
*:others/mbedtls/base64.c
*:others/mbedtls/md5.c
*:others/mbedtls/sha1.c


//
// Code imported from ModSecurity v2...
//
shiftNegative:src/utils/msc_tree.cc
*:src/utils/acmp.cc
*:src/utils/msc_tree.cc


// 
// ModSecurity v3 code...
// 
useInitializationList:src/utils/shared_files.h:87
duplicateBranch:src/audit_log/audit_log.cc:226
unreadVariable:src/request_body_processor/multipart.cc:435
syntaxError:src/transaction.cc:62
noConstructor:src/variables/variable.h:152
rethrowNoCurrentException:headers/modsecurity/transaction.h:313
rethrowNoCurrentException:src/rule_with_actions.cc:127

variableScope:src/operators/rx.cc
variableScope:src/operators/rx_global.cc

noExplicitConstructor:seclang-parser.hh
constParameter:seclang-parser.hh
accessMoved:seclang-parser.hh
returnTempReference:seclang-parser.hh

unreadVariable:src/operators/rx.cc
unreadVariable:src/operators/rx_global.cc

noExplicitConstructor:src/collection/backend/collection_data.h
stlIfStrFind:src/collection/backend/collection_data.cc

unusedFunction
missingIncludeSystem
useStlAlgorithm
preprocessorErrorDirective
funcArgNamesDifferent
missingInclude

purgedConfiguration

nullPointerRedundantCheck
knownConditionTrueFalse
cstyleCast
functionStatic
shadowFunction

stlcstrConstructor
stlcstrStream
uselessCallsSubstr

// Examples
memleak:examples/using_bodies_in_chunks/simple_request.cc
